syntax = "proto3";

package file_service;
option go_package = "github.com/keenoobi/grpc-file-manager/api/proto";

import "google/protobuf/timestamp.proto";

service FileService {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadFileRequest {
  oneof data {
    FileMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message UploadFileResponse {
  string filename = 1;
  uint64 size = 2;
  google.protobuf.Timestamp created_at = 3;
}

message DownloadFileRequest { string filename = 1; }

message DownloadFileResponse {
  oneof content {
    FileMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message ListFilesRequest {}

message ListFilesResponse { repeated FileInfo files = 1; }

message FileInfo {
  string filename = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message FileMetadata {
  string filename = 1;
  uint64 size = 2;
  google.protobuf.Timestamp created_at = 3;
}
